--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,8 @@
 }
 
 .show-case-container {
-  width: 50%;
+  width: 70%;
+  margin-right: 200px;
 }
 
 .card-handler {
@@ -51,6 +52,8 @@
   position: relative;
   cursor: pointer;
   border: 2px solid white;
+  max-height: 150px;
+  max-width: 150px;
 }
 
 .position-relative {
@@ -62,10 +65,10 @@
   margin: 10px;
   height: 82vh;
   position: fixed;
-  right: 60px;
+  right: 20px;
   padding: 0 15px;
   text-align: center;
-  top: 120px;
+  top: 175px;
   bottom: 0;
   margin-bottom: 0;
   border-bottom-left-radius: 0;
@@ -86,13 +89,13 @@
   padding: 12px;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  /* flex-grow: 1; */
-  -moz-column-gap: 30%;
-       column-gap: 30%;
 }
 
-.tabs div:nth-child(2) {
-  width: 100%;
+.tabs {
+  width: 50%;
+}
+
+.tabs div:nth-child(even) {
   background-color: #F6F8FC;
   padding: 8px 0;
   border-radius: 30px;
@@ -109,8 +112,8 @@
 
 .animatedImage {
   position: absolute;
-  left: 40%;
-  bottom: 80%;
+  left: 32%;
+  bottom: 94%;
 }
 
 .animatedImage img {
@@ -121,7 +124,7 @@
 .imager {
   position: absolute;
   left: 30%;
-  bottom: 80%;
+  bottom: 70%;
 }
 
 .imager img {
@@ -145,7 +148,6 @@
 
 .text-header {
   text-align: center;
-  margin-top: 20px;
 }
 
 .search-btn {
@@ -164,11 +166,11 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  margin-top: 30px;
+  margin-top: 10px;
 }
 
 .card-css {
-  font-size: 10px;
+  font-size: 16px;
   padding: 12px;
   font-weight: 800;
   opacity: 0.8;
@@ -181,45 +183,118 @@
   width: 90%;
 }
 
+.abilities {
+  display: flex;
+  justify-content: space-around;
+}
+
+.mt-20 {
+  margin-top: 20px;
+}
+
+.lh-500 {
+  line-height: 500px;
+}
+
 .search-barContainer input:focus-visible {
   outline: 0px none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    -webkit-animation: App-logo-spin infinite 20s linear;
-            animation: App-logo-spin infinite 20s linear;
-  }
-}
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.cyllinder-cards {
+  bottom: 100px;
   display: flex;
+  justify-content: space-around;
+}
+
+.position-absolute {
+  position: absolute;
+}
+
+.cyllinder-outer {
+  background: #F6F8FC;
+  display: flex;
+  padding: 5px;
+  border-radius: 30px;
+  margin: 5px;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+.ranks {
+  margin: 6px 0;
+}
+
+.loader-image {
+  margin: auto;
+  width: 100%;
+  line-height: 0 !important;
+  transition: all 0.3s ease;
+}
+
+.loader-image .rotate-loader {
+  -webkit-animation: spin 1.5s linear infinite;
+          animation: spin 1.5s linear infinite;
+}
+
+.cyllinder-circle {
+  background-color: #DF2140;
+  border-radius: 50%;
+  height: 25px;
+  width: 25px;
   color: white;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 10px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@-webkit-keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@-webkit-keyframes spin {
+  0% {
+    transform: rotate(350deg);
   }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@keyframes spin {
+  0% {
+    transform: rotate(350deg);
   }
-  to {
-    transform: rotate(360deg);
+}
+@media only screen and (max-width: 360px) {
+  .detail-container {
+    right: 5px;
+  }
+}
+@media only screen and (min-width: 370px) and (max-width: 375px) {
+  .detail-container {
+    right: 13px;
+  }
+}
+@media only screen and (min-width: 390px) and (max-width: 400px) {
+  .detail-container {
+    right: 19px;
+  }
+}
+@media only screen and (min-width: 410px) and (max-width: 500px) {
+  .detail-container {
+    right: 32px;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .card-handler {
+    min-width: 100%;
+  }
+  .show-case-container {
+    margin-right: 53px;
+  }
+  .active {
+    top: 170px !important;
+  }
+  .search-barContainer {
+    width: 100%;
+  }
+  .detail-container {
+    margin: auto;
+    top: 10000px;
+    transition: all 0.3s ease-out;
   }
 }/*# sourceMappingURL=App.css.map */
