--- a/src/App.css
+++ b/src/App.css
@@ -154,6 +154,7 @@ body {
 .cards-container {
   width: 100%;
   display: flex;
+  justify-content: space-around;
   flex-wrap: wrap;
   row-gap: 30px;
 }
@@ -240,6 +241,10 @@ body {
   margin: 6px 0;
 }
 
+.active {
+  top: 170px !important;
+}
+
 .loader-image {
   margin: auto;
   width: 100%;
@@ -303,9 +308,6 @@ body {
   .show-case-container {
     margin-right: 53px;
   }
-  .active {
-    top: 170px !important;
-  }
   .search-barContainer {
     width: 100%;
   }
@@ -313,5 +315,34 @@ body {
     margin: auto;
     top: 10000px;
     transition: all 0.3s ease-out;
+  }
+}
+@media only screen and (min-width: 1618) {
+  .cards-container {
+    -moz-column-gap: 90px;
+         column-gap: 90px;
+  }
+}
+@media only screen and (max-width: 1000px) {
+  .detail-container {
+    /* margin: auto; */
+    width: 95%;
+    top: 10000px;
+    right: -6px;
+  }
+  .animatedImage {
+    left: 50%;
+  }
+  .active {
+    top: 126px !important;
+  }
+  .lh-500 {
+    line-height: 200px;
+  }
+  .show-case-container {
+    margin-right: 0px;
+  }
+  .card-handler {
+    min-width: 100%;
   }
 }/*# sourceMappingURL=App.css.map */
