--- a/src/App.scss
+++ b/src/App.scss
@@ -136,6 +136,7 @@ body{
 .cards-container{
   width: 100%;
   display: flex;
+  justify-content: space-around;
   flex-wrap: wrap;
   row-gap: 30px;
 
@@ -210,6 +211,9 @@ body{
 .ranks{
   margin: 6px 0
 }
+.active{
+  top:170px !important
+}
 .loader-image{
   margin: auto;
   width: 100%;
@@ -268,9 +272,7 @@ body{
   .show-case-container{
     margin-right:53px;
   }
-  .active{
-    top:170px !important
-  }
+  
   .search-barContainer{
     width: 100%;
   }
@@ -278,5 +280,33 @@ body{
     margin: auto;
     top:10000px;
     transition: all .3s ease-out;
+  }
+}
+@media only screen and (min-width:1618){
+  .cards-container{
+    column-gap:90px;
+  }
+}
+@media only screen and  (max-width: 1000px) {
+  .detail-container{
+        /* margin: auto; */
+    width: 95%;
+    top: 10000px;
+    right: -6px;
+  }
+  .animatedImage{
+    left: 50%;
+  }
+  .active {
+    top: 126px !important;
+  }
+  .lh-500{
+    line-height: 200px;
+  }
+  .show-case-container{
+    margin-right:0px;
+  }
+  .card-handler{
+    min-width: 100%;
   }
 }
