loader at the end of the road

--- a/src/App.scss
+++ b/src/App.scss
@@ -196,6 +196,11 @@ body{
   justify-content: space-around;
   
 }
+.scroll-loader{
+  text-align: center;
+  margin-top: 10px !important;
+
+}
 .position-absolute{
   position:absolute;
 }
