--- a/src/App.css
+++ b/src/App.css
@@ -223,6 +223,11 @@ body {
   justify-content: space-around;
 }
 
+.scroll-loader {
+  text-align: center;
+  margin-top: 10px !important;
+}
+
 .position-absolute {
   position: absolute;
 }
